styled dark mode icon

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -35,6 +35,15 @@ button {
     color: inherit;
     cursor: pointer;
     font-size: 40px;
+    padding: 20px;
+}
+
+.fa-sun {
+    color: #333333;
+}
+
+.fa-moon {
+    color: #ffffff;
 }
 
 footer {
