--- a/assets/scss/styles-header.scss
+++ b/assets/scss/styles-header.scss
@@ -18,6 +18,10 @@
         display: flex;
         justify-content: center;
     }
+    .search{
+        display: flex;
+        justify-content: end;
+    }
     
 }
 // -----------------------ecran tablette------------------------------------
