--- a/assets/scss/card.scss
+++ b/assets/scss/card.scss
@@ -15,6 +15,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     .card-container {
+        position: relative;
       justify-content: center;
       width: 30%;
       height: auto;
@@ -40,7 +41,6 @@ body {
         }
         img {
           width: 100%;
-          padding: 10%;
         }
 
         p {
@@ -53,7 +53,6 @@ body {
           font-size: 1.25rem;
           justify-content: end;
           margin-right: 2%;
-          margin-bottom: 15%;
         }
       }
     }
