--- a/assets/scss/styles-header.css
+++ b/assets/scss/styles-header.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 750px) {
-  .container-button {
+  .container {
     display: flex;
     justify-content: center;
   }
@@ -21,7 +21,7 @@
   }
 }
 @media screen and (min-width: 751px) and (max-width: 1800px) {
-  .container-button {
+  .container {
     display: flex;
     justify-content: center;
   }
@@ -51,7 +51,7 @@ header button {
   border-radius: 20%; /* Ajoute des coins arrondis */
   text-align: center; /* Centre le texte dans le bouton */
 }
-header .logo {
+header nav {
   display: flex;
   justify-content: center;
 }/*# sourceMappingURL=styles-header.css.map */
