--- a/assets/scss/card.scss
+++ b/assets/scss/card.scss
@@ -1,3 +1,4 @@
+@import './filter.scss';
 *{
   margin: 0;
   padding: 0;
@@ -8,10 +9,10 @@
   }
   
   body {
+    display: flex;
     padding: 5%;
   
     main {
-  
       .div-container-menu{
         display: flex;
         flex-wrap: wrap;
