--- a/assets/scss/styles-header.css
+++ b/assets/scss/styles-header.css
@@ -1,4 +1,26 @@
-@media screen and (max-width: 750px) {
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Flamenco:wght@300;400&display=swap");
+:root {
+  --header-link-color: #704929;
+}
+
+.dark-mode {
+  --header-link-color: #333333;
+}
+
+.flamenco-light {
+  font-family: "Flamenco", system-ui;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.flamenco-regular {
+  font-family: "Flamenco", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@media screen and (max-width: 480px) {
   .container {
     display: flex;
     justify-content: center;
@@ -9,7 +31,7 @@
     justify-content: flex-end;
     color: #DAA520; /* Couleur du texte du bouton */
     border-radius: 20%; /* Ajoute des coins arrondis */
-    text-align: center;
+    text-align: center; /* Centre le texte dans le bouton */
   }
   .logo {
     display: flex;
@@ -19,39 +41,53 @@
     display: flex;
     justify-content: end;
   }
-}
-@media screen and (min-width: 751px) and (max-width: 1800px) {
-  .container {
+  .menu {
     display: flex;
     justify-content: center;
-  }
-  button {
-    background-color: burlywood;
-    justify-content: flex-end;
-    color: brown; /* Couleur du texte du bouton */
-    border-radius: 20%; /* Ajoute des coins arrondis */
-    text-align: center; /* Centre le texte dans le bouton */
-  }
-  .logo {
-    display: flex;
-    justify-content: center;
+    flex-direction: column;
   }
 }
 header {
   background-color: #DAA520;
 }
-header .container-button {
-  display: flex;
-  justify-content: center;
-}
-header button {
-  background-color: burlywood;
-  justify-content: flex-end;
-  color: brown; /* Couleur du texte du bouton */
-  border-radius: 20%; /* Ajoute des coins arrondis */
-  text-align: center; /* Centre le texte dans le bouton */
-}
 header nav {
   display: flex;
+  flex-direction: column; /* Disposer les éléments horizontalement */
   justify-content: center;
+  justify-items: center;
+  align-content: center;
+}
+header nav a {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  margin-right: 10px;
+  color: var(--header-link-color);
+  text-decoration: none;
+  font-family: "Flamenco", system-ui;
+  font-size: 40px;
+  font-weight: 800;
+}
+header .menu {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+header .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Ajout de la valeur align-items appropriée */
+  width: 15%;
+}
+header .Div-logo {
+  display: flex;
+  justify-content: space-around;
+}
+header .Div-menu {
+  display: flex;
+  justify-content: center;
+}
+header .dark-mode {
+  background-color: black;
+  color: #333333;
 }/*# sourceMappingURL=styles-header.css.map */
