--- a/assets/scss/styles-header.scss
+++ b/assets/scss/styles-header.scss
@@ -1,9 +1,29 @@
-// -----------------------ecran gsm------------------------------------
-@media screen and (max-width: 750px){
+@import url('https://fonts.googleapis.com/css2?family=Flamenco:wght@300;400&display=swap');
+:root { 
+    --header-link-color: #704929; 
+}
+
+.dark-mode { 
+    --header-link-color: #333333; 
+}
+
+.flamenco-light {
+    font-family: "Flamenco", system-ui;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .flamenco-regular {
+    font-family: "Flamenco", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+// -----------------------écran gsm------------------------------------
+@media screen and (max-width: 480px){
     .container {
         display: flex;
         justify-content: center;
-        
     }
     button {
         background-color: burlywood;
@@ -11,8 +31,7 @@
         justify-content: flex-end; 
         color: #DAA520; /* Couleur du texte du bouton */
         border-radius: 20%; /* Ajoute des coins arrondis */
-        text-align: center; // Centre le texte dans le bouton 
-    
+        text-align: center; /* Centre le texte dans le bouton */
     }
     .logo{
         display: flex;
@@ -22,54 +41,92 @@
         display: flex;
         justify-content: end;
     }
-    
-    
-}
-// -----------------------ecran tablette------------------------------------
-@media screen and (min-width: 751px) and (max-width: 1800px){
-    .container {
+    .menu{
         display: flex;
         justify-content: center;
-        
-    }
-    button {
-        background-color: burlywood;
-        justify-content: flex-end;
-        color: brown; /* Couleur du texte du bouton */
-        border-radius: 20%; /* Ajoute des coins arrondis */
-        text-align: center; /* Centre le texte dans le bouton */
+        flex-direction: column;
+    } 
+}
 
-    }
-    .logo{
-        display: flex;
-        justify-content: center;
-    }
-    
-}
-// -----------------------ecran pc------------------------------------
+// // -----------------------écran tablette------------------------------------
+// @media screen and (min-width: 750px) and (max-width: 1800px){
+//     .container {
+//         display: flex;
+//         justify-content: center;
+//     }
+//     button {
+//         background-color: burlywood;
+//         justify-content: flex-end;
+//         color: brown; /* Couleur du texte du bouton */
+//         border-radius: 20%; /* Ajoute des coins arrondis */
+//         text-align: center; /* Centre le texte dans le bouton */
+//     }
+//     .menu {
+//         display: flex;
+//         justify-content: center;
+//         flex-direction: column;
+//     }
+//     .logo {
+//         display: flex;
+//         justify-content: center;
+//         width: 15%;
+//     } 
+// }
+
+// -----------------------écran pc------------------------------------
 header {
     background-color: #DAA520;
+    nav {
+        display: flex;
+        flex-direction: column; /* Disposer les éléments horizontalement */
+        justify-content: center;
+        justify-items: center;
+        align-content: center;
+        
+        
+    }
+    nav a {
+        display: flex;
+        justify-content:center ;
+        align-items: end;
+        margin-right: 10px;
+        color: var(--header-link-color);
+        text-decoration: none;
+        font-family: "Flamenco", system-ui;
+        font-size: 40px;
+        font-weight: 800;
 
-    .container-button {
+        
+    }
+    
+
+    .menu {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .logo {
+        display: flex;
+        justify-content: center;
+        align-items: center; /* Ajout de la valeur align-items appropriée */
+        width: 15%;
+    }
+    .Div-logo{
+        display: flex;
+        justify-content: space-around;
+
+    }
+
+    .Div-menu
+    {
         display: flex;
         justify-content: center;
         
     }
-  
-    button  {
-        background-color: burlywood;
-        justify-content: flex-end; 
-        color: brown; /* Couleur du texte du bouton */
-        border-radius: 20%; /* Ajoute des coins arrondis */
-        text-align: center; /* Centre le texte dans le bouton */
-       
 
-    }
-    nav{
-        display: flex;
-        justify-content: center;
-    }
     
-    
-    
+    .dark-mode {
+        background-color: black;
+        color: #333333;
+      }
 }
