--- a/Web/DOM/assets/css/card.css
+++ b/Web/DOM/assets/css/card.css
@@ -5,6 +5,12 @@ aside {
   background-color: red;
   width: 25%;
 }
+aside input {
+  margin: 4px 0 0;
+  line-height: normal;
+  width: 20px;
+  height: 20px;
+}
 aside .legend_filter {
   text-align: center;
 }
