--- a/assets/css/card.scss
+++ b/assets/css/card.scss
@@ -1,13 +1,9 @@
 :root {
-  --card-background-color: #333333; 
-  --card-text-color: #333333; 
-  --card-link-color: #333333; 
+  --card-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
 }
 
 .dark-mode {
-  --card-background-color: #ffffff; 
-  --card-text-color: #704929;
-  --card-link-color: #EFE7E1; 
+  --card-shadow: 0 4px 8px rgba(255, 255, 255, 0.3);
 }
 
 * {
@@ -22,52 +18,78 @@ body {
   padding: 5%;
 
   main {
-    display: grid;
-    grid-template-columns: 80% 20%;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     .div-container-menu{
-      display: flex;
-      flex-wrap: wrap;
+
         .card-container {
           justify-content: center;
-          width: 30%;
-          height: auto;
           border-radius: 30px;
-          background-color: var(--card-background-color);
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-          margin-right: 3%;
-          margin-top: 8%;
-          border: 1px solid #f0f0f0;
-          padding: 1.667vw 1.25vw;
+          color: #DAA520;
+          background-color: #EFE7E1;
+          box-shadow: var(--card-shadow);
+          margin-bottom: 15px;
+          height: 100vh;
+          width: 400px;
+
           .card {
             text-align: center;
-    
             &:hover {
+
               img {
-                transform: scale(1.1);
-                transition: ease 0.2s;
+                transform: scale(1.15);
+                transition: ease 0.5s;
               }
+
             }
+
             img {
-              width: 100%;
-              padding: 10%;
+              width: 80%;
+              padding: 8%;
             }
-    
+
+            h2 {
+              font-family: flamenco;
+            }
+
             p {
-              color: gray;
-              padding: 4%;
+              color: black;
+              padding: 10px;
+              font-weight: 400;
+              font-size: medium;
+              font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
             }
-    
+            
             strong {
               display: flex;
-              font-size: 1.25rem;
+              font-size: 1.1rem;
               justify-content: end;
               margin-right: 2%;
               margin-bottom: 15%;
+              font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
             }
           }
         }
       }
     }
     
+}
+
+@media screen and (min-width: 481px) {
+  main {
+    justify-content: flex-start;
+    width: 70%; 
+    margin: 0;
+
+    .div-container-menu{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      flex: 1 0 50%;
+      box-sizing: border-box;
+      margin: 10px;
+    }
+  }
 }
