--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,7 +1,7 @@
 :root {
-    --background-color: #ffffff; 
+    --background-color: #EFE7E1; 
     --text-color: #704929;
-    --link-color: #EFE7E1; 
+    --link-color: #704929; 
 }
 
 .dark-mode {
@@ -32,15 +32,15 @@ button {
     cursor: pointer;
     font-size: 40px;
     padding: 20px;
+    .fa-sun {
+        color: #333333;
+    }
+    
+    .fa-moon {
+        color: #EFE7E1;
+    }
 }
 
-.fa-sun {
-    color: #333333;
-}
-
-.fa-moon {
-    color: #ffffff;
-}
 
 footer {
     background-color:  #DAA520;
@@ -55,6 +55,9 @@ footer {
     h2{
         letter-spacing: 2px;
         font-size: 40px;
+    }
+    h3 {
+        margin: 20px 0;
     }
     i {
         color: var(--link-color);
