--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -29,6 +29,7 @@ body main .div-container-menu .card-container {
   background-color: #EFE7E1;
   box-shadow: var(--card-shadow);
   margin-bottom: 15px;
+  height: 100vh;
   width: 400px;
 }
 body main .div-container-menu .card-container .card {
