--- a/assets/css/card.scss
+++ b/assets/css/card.scss
@@ -31,6 +31,7 @@ body {
           background-color: #EFE7E1;
           box-shadow: var(--card-shadow);
           margin-bottom: 15px;
+          height: 100vh;
           width: 400px;
 
           .card {
