--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -1,11 +1,3 @@
-:root {
-  --card-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-.dark-mode {
-  --card-shadow: 0 4px 8px rgba(255, 255, 255, 0.3);
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -17,63 +9,41 @@
 body {
   padding: 5%;
 }
-body main {
+body main .div-container-menu {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
 }
 body main .div-container-menu .card-container {
   justify-content: center;
+  width: 30%;
+  height: auto;
   border-radius: 30px;
-  color: #DAA520;
-  background-color: #EFE7E1;
-  box-shadow: var(--card-shadow);
-  margin-bottom: 15px;
-  height: 100vh;
-  width: 400px;
+  background-color: #f5f6f7;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.04), 6px 3px 14px 0px rgba(0, 0, 0, 0.04), 23px 12px 26px 0px rgba(0, 0, 0, 0.03), 53px 27px 35px 0px rgba(0, 0, 0, 0.02), 94px 48px 42px 0px rgba(0, 0, 0, 0.01);
+  margin-right: 3%;
+  margin-top: 8%;
+  border: 1px solid #f0f0f0;
+  padding: 1.667vw 1.25vw;
 }
 body main .div-container-menu .card-container .card {
   text-align: center;
 }
 body main .div-container-menu .card-container .card:hover img {
-  transform: scale(1.15);
-  transition: ease 0.5s;
+  transform: scale(1.1);
+  transition: ease 1.2s;
 }
 body main .div-container-menu .card-container .card img {
-  width: 80%;
-  padding: 8%;
-}
-body main .div-container-menu .card-container .card h2 {
-  font-family: flamenco;
+  width: 100%;
+  padding: 10%;
 }
 body main .div-container-menu .card-container .card p {
-  color: black;
-  padding: 10px;
-  font-weight: 400;
-  font-size: medium;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
+  color: gray;
+  padding: 4%;
 }
 body main .div-container-menu .card-container .card strong {
   display: flex;
-  font-size: 1.1rem;
+  font-size: 1.25rem;
   justify-content: end;
   margin-right: 2%;
   margin-bottom: 15%;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
-}
-
-@media screen and (min-width: 481px) {
-  main {
-    justify-content: flex-start;
-    width: 70%;
-    margin: 0;
-  }
-  main .div-container-menu {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    flex: 1 0 50%;
-    box-sizing: border-box;
-    margin: 10px;
-  }
 }
