--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -29,7 +29,6 @@ body main .div-container-menu .card-container {
   background-color: #EFE7E1;
   box-shadow: var(--card-shadow);
   margin-bottom: 15px;
-  height: 100vh;
   width: 400px;
 }
 body main .div-container-menu .card-container .card {
@@ -71,9 +70,9 @@ body main .div-container-menu .card-container .card strong {
   main .div-container-menu {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     flex: 1 0 50%;
     box-sizing: border-box;
     margin: 10px;
   }
-}/*# sourceMappingURL=card.css.map */
+}
