--- a/assets/css/side-menu.css
+++ b/assets/css/side-menu.css
@@ -1,7 +1,69 @@
 .sidebar-menu {
+  background: #fcfdfd;
   position: fixed;
+  display: block;
+  padding: 2%;
   right: -550px;
   top: 0;
-  background: red;
-  transition: right ease-in-out 0.3s;
+  transition: right ease-in-out 0.5s;
+  width: 30%;
+  z-index: 99999;
+}
+.sidebar-menu h2 {
+  margin-bottom: 8%;
+}
+.sidebar-menu .border-grey {
+  background: #F0F0F0;
+  width: 100%;
+  height: 1px;
+  margin-bottom: 8%;
+}
+.sidebar-menu ul {
+  margin: 0;
+  display: block;
+  position: relative;
+  z-index: 0;
+}
+.sidebar-menu ul .border-div-li {
+  background: #F0F0F0;
+  width: 100%;
+  height: 1px;
+  margin-bottom: 8%;
+}
+.sidebar-menu ul li {
+  display: flex;
+  position: relative;
+  align-items: center;
+  gap: 16px;
+}
+.sidebar-menu ul li img {
+  width: 25%;
+}
+.sidebar-menu ul li .text-produit {
+  width: 100%;
+  margin-bottom: 6%;
+}
+.sidebar-menu ul li .text-produit h5 {
+  font-size: 1.3rem;
+}
+.sidebar-menu ul li .text-produit input {
+  border: none;
+  padding: 0;
+  background: transparent;
+  text-align: center;
+}
+.sidebar-menu ul li .text-produit .prix {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.sidebar-menu ul li .text-produit .prix .quantite-content {
+  background: #f0f0f0;
+  display: flex;
+  gap: 8px;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 5px;
+  padding: 0.833vw;
+  height: 2.917vw;
 }/*# sourceMappingURL=side-menu.css.map */
