--- a/assets/scss/side-menu.scss
+++ b/assets/scss/side-menu.scss
@@ -1,7 +1,87 @@
+
+
 .sidebar-menu {
-    position: fixed;
-    right: -550px;
-    top: 0;
-    background: red;
-    transition: right ease-in-out 0.3s;
+  background: #fcfdfd;
+  position: fixed;
+  display: block;
+  padding: 2%;
+  right: -550px;
+  top: 0;
+  transition: right ease-in-out 0.5s;
+  width: 30%;
+  z-index: 99999;
+
+  h2 {
+
+    margin-bottom: 8%;
+  }
+
+  .border-grey {
+    background: #F0F0F0;
+    width: 100%;
+    height: 1px;
+    margin-bottom: 8%;
+  }
+
+  ul {
+    margin: 0;
+    display: block;
+    position: relative;
+    z-index: 0;
+
+
+    .border-div-li {
+
+        background: #F0F0F0;
+        width: 100%;
+        height: 1px;
+        margin-bottom: 8%;
+
+      }
+
+    li {
+      display: flex;
+      position: relative;
+      align-items: center;
+      gap: 16px;
+
+      img {
+        width: 25%;
+      }
+
+    
+
+      .text-produit {
+        width: 100%;
+        margin-bottom: 6%;
+
+        h5 {
+          font-size: 1.3rem;
+        }
+
+        input {
+          border: none;
+          padding: 0;
+          background: transparent;
+          text-align: center;
+        }
+
+        .prix {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          .quantite-content {
+            background: #f0f0f0;
+            display: flex;
+            gap: 8px;
+            width: fit-content;
+            border-radius: 5px;
+            padding: 0.833vw;
+            height: 2.917vw;
+          }
+        }
+      }
+    }
+  }
 }
