--- a/assets/scss/side-menu.scss
+++ b/assets/scss/side-menu.scss
@@ -1,4 +1,15 @@
 
+.modal-filter{
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(40, 37, 37, 0.2);
+    z-index: 999; 
+}
+
 
 .sidebar-menu {
   background: #fcfdfd;
@@ -11,10 +22,29 @@
   width: 30%;
   z-index: 99999;
 
-  h2 {
+  
 
+.text-shop {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 8%;
-  }
+
+    h2 {
+
+      }
+
+      i {
+
+
+
+      }
+
+}
+
+
+ 
 
   .border-grey {
     background: #F0F0F0;
