--- a/assets/css/side-menu.css
+++ b/assets/css/side-menu.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .modal-filter {
   position: fixed;
   top: 0;
@@ -16,8 +17,10 @@
   right: -550px;
   top: 0;
   transition: right ease-in-out 0.5s;
-  width: 30%;
+  width: 33%;
   z-index: 99999;
+  overflow-y: auto; /* Ajout du défilement vertical lorsque le contenu dépasse la hauteur de la barre latérale */
+  max-height: 100%;
 }
 .sidebar-menu .text-shop {
   display: flex;
