--- a/assets/css/side-menu.css
+++ b/assets/css/side-menu.css
@@ -45,6 +45,7 @@
   width: 100%;
   height: 1px;
   margin-bottom: 8%;
+  margin-top: 5%;
 }
 .sidebar-menu ul li {
   display: flex;
@@ -90,4 +91,38 @@
 }
 .sidebar-menu .total h6 {
   font-size: 1.3rem;
+}
+.sidebar-menu .checkout-button a {
+  margin-top: 3%;
+  border-radius: 10px;
+  box-shadow: 0px 15px 30px 0px rgba(40, 37, 37, 0.5);
+  padding: 0.417vw 1.25vw 0.417vw 0.417vw;
+  transition: all 0.5s ease-in;
+  font-size: 0.938vw;
+  font-weight: 500;
+  line-height: 120%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  border: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transition: all 0.5s ease-in;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.sidebar-menu .checkout-button a h5 {
+  font-size: 0.7rem;
+}
+.sidebar-menu .checkout-button a i {
+  font-size: 1.2rem;
+}
+.sidebar-menu .checkout-button .outline-a {
+  background: transparent;
+  color: #FF5C00;
+  border: 1px solid #FF5C00;
+  box-shadow: none;
+  transition: all 0.5s ease-in;
 }/*# sourceMappingURL=side-menu.css.map */
