--- a/assets/scss/card.scss
+++ b/assets/scss/card.scss
@@ -1,3 +1,6 @@
+//importation of all scss files
+@import './footer.scss';
+@import './side-menu.scss';
 :root {
   --card-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
