--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -1,3 +1,207 @@
+@charset "UTF-8";
+:root {
+  --background-color: #EFE7E1;
+  --text-color: #704929;
+  --link-color: #704929;
+}
+
+.dark-mode {
+  --background-color: #333333;
+  --text-color: #333333;
+  --link-color: #333333;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+a {
+  color: var(--link-color);
+}
+
+button {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  background-color: transparent;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+  font-size: 40px;
+  padding: 20px;
+}
+button .fa-sun {
+  color: #333333;
+}
+button .fa-moon {
+  color: #EFE7E1;
+}
+
+footer {
+  background-color: #DAA520;
+  color: var(--text-color);
+  text-align: center;
+  font-family: Flamenco;
+  padding: 40px 0;
+}
+footer .footer-container {
+  display: flex;
+  justify-content: space-around;
+}
+footer h2 {
+  letter-spacing: 2px;
+  font-size: 40px;
+}
+footer h3 {
+  margin: 20px 0;
+}
+footer i {
+  color: var(--link-color);
+  font-size: 25px;
+  margin: 0 10px;
+}
+
+@media screen and (min-width: 481px) {
+  footer h2 {
+    letter-spacing: 2px;
+    font-size: 50px;
+  }
+  footer i {
+    color: var(--link-color);
+    font-size: 30px;
+    margin: 0 20px;
+  }
+}
+.modal-filter {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(40, 37, 37, 0.2);
+  z-index: 999;
+}
+
+.sidebar-menu {
+  background: #fcfdfd;
+  position: fixed;
+  display: block;
+  padding: 2%;
+  right: -550px;
+  top: 0;
+  transition: right ease-in-out 0.5s;
+  width: 33%;
+  z-index: 99999;
+  overflow-y: auto; /* Ajout du défilement vertical lorsque le contenu dépasse la hauteur de la barre latérale */
+  max-height: 100%;
+}
+.sidebar-menu .text-shop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8%;
+}
+.sidebar-menu .border-grey {
+  background: #F0F0F0;
+  width: 100%;
+  height: 1px;
+  margin-bottom: 8%;
+}
+.sidebar-menu ul {
+  margin: 0;
+  display: block;
+  position: relative;
+  z-index: 0;
+}
+.sidebar-menu ul .border-div-li {
+  background: #F0F0F0;
+  width: 100%;
+  height: 1px;
+  margin-bottom: 8%;
+  margin-top: 5%;
+}
+.sidebar-menu ul li {
+  display: flex;
+  position: relative;
+  align-items: center;
+  gap: 16px;
+}
+.sidebar-menu ul li img {
+  width: 25%;
+}
+.sidebar-menu ul li .text-produit {
+  width: 100%;
+  margin-bottom: 6%;
+}
+.sidebar-menu ul li .text-produit h5 {
+  font-size: 1.3rem;
+}
+.sidebar-menu ul li .text-produit input {
+  border: none;
+  padding: 0;
+  background: transparent;
+  text-align: center;
+}
+.sidebar-menu ul li .text-produit .prix {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.sidebar-menu ul li .text-produit .prix .quantite-content {
+  background: #f0f0f0;
+  display: flex;
+  gap: 8px;
+  width: fit-content;
+  border-radius: 5px;
+  padding: 0.833vw;
+  height: 2.917vw;
+}
+.sidebar-menu .total {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.sidebar-menu .total h6 {
+  font-size: 1.3rem;
+}
+.sidebar-menu .checkout-button a {
+  margin-top: 3%;
+  border-radius: 10px;
+  box-shadow: 0px 15px 30px 0px rgba(40, 37, 37, 0.5);
+  padding: 0.417vw 1.25vw 0.417vw 0.417vw;
+  transition: all 0.5s ease-in;
+  font-size: 0.938vw;
+  font-weight: 500;
+  line-height: 120%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  border: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transition: all 0.5s ease-in;
+  width: fit-content;
+  cursor: pointer;
+}
+.sidebar-menu .checkout-button a h5 {
+  font-size: 0.7rem;
+}
+.sidebar-menu .checkout-button a i {
+  font-size: 1.2rem;
+}
+.sidebar-menu .checkout-button .outline-a {
+  background: transparent;
+  color: #FF5C00;
+  border: 1px solid #FF5C00;
+  box-shadow: none;
+  transition: all 0.5s ease-in;
+}
+
 :root {
   --card-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
