--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -90,4 +90,4 @@ header .Div-menu {
 header .dark-mode {
   background-color: black;
   color: #333333;
-}/*# sourceMappingURL=styles-header.css.map */
+}
