--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,5 +1,5 @@
 //importation of all scss files
-@import 'footer';
-@import 'card';
-@import 'side-menu';
-@import 'header';
+@import 'scss/footer';
+@import 'scss/card';
+@import 'scss/side-menu';
+@import 'scss/header';
