--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,5 +1,5 @@
 //importation of all scss files
-@import 'scss/footer';
-@import 'scss/card';
-@import 'scss/side-menu';
-@import 'scss/header';
+@import 'scss/_footer';
+@import 'scss/_card';
+@import 'scss/_side-menu';
+@import 'scss/_header';
