--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,5 @@
 //importation of all scss files
-@import 'scss/footer';
-@import 'scss/card';
-@import 'scss/side-menu';
-@import 'scss/header';
+@import 'footer';
+@import 'card';
+@import 'side-menu';
+@import 'header';
