--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -16,6 +16,7 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     // position: relative;
+    
 }
 
 a {
@@ -43,7 +44,8 @@ button {
 
 
 footer {
-    background-color:  #DAA520;
+    background-image: url(https://cdn.discordapp.com/attachments/1225466626007236720/1234260274782146732/fast-food-fastfoodcity.png?ex=663015f4&is=662ec474&hm=37691aafce508ecfc40e6c8e2ad1e48a50249de6d7f54d9f35899df3e81e1097&);
+    background-position: center;
     color: var(--text-color);
     text-align: center;
     font-family: Flamenco;
