--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -75,7 +75,7 @@
 
 // -----------------------écran pc------------------------------------
 header {
-    background-image: url(https://cdn.discordapp.com/attachments/1225466626007236720/1234260274782146732/fast-food-fastfoodcity.png?ex=663015f4&is=662ec474&hm=37691aafce508ecfc40e6c8e2ad1e48a50249de6d7f54d9f35899df3e81e1097&);
+    background-image: url(/assets/images/fast-food-fastfoodcity.png);
     background-repeat: no-repeat;
     background-size: cover;
 
