--- a/assets/scss/_card.scss
+++ b/assets/scss/_card.scss
@@ -1,4 +1,3 @@
-
 :root {
   --card-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
@@ -17,8 +16,6 @@
 }
 
 body {
-
-
   main {
     .div-container-menu {
       padding: 5%;
@@ -56,6 +53,9 @@ body {
           p {
             color: gray;
             padding: 4%;
+            font-size: 0.9rem;
+            font-weight: 400;
+            margin-bottom: 15%;
           }
 
           .parent-div {
@@ -118,5 +118,3 @@ h5 {
     }
   }
 }
-
-
