--- a/assets/scss/_side-menu.scss
+++ b/assets/scss/_side-menu.scss
@@ -1,16 +1,12 @@
-
-.modal-filter{
-
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(40, 37, 37, 0.2);
-    z-index: 999; 
+.modal-filter {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(40, 37, 37, 0.2);
+  z-index: 999;
 }
-
-
 
 .sidebar-menu {
   background: #fcfdfd;
@@ -22,36 +18,23 @@
   transition: right ease-in-out 0.5s;
   width: 33%;
   z-index: 99999;
-  overflow-y: auto; /* Ajout du défilement vertical lorsque le contenu dépasse la hauteur de la barre latérale */
+  overflow-y: auto;
   max-height: 100%;
-.text-shop {
-
+  .text-shop {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 8%;
 
-
-
-
-
     h2 {
+    }
 
-      }
-
-      i {
-
-
-
-      }
-
-}
-
-
- 
+    i {
+    }
+  }
 
   .border-grey {
-    background: #F0F0F0;
+    background: #f0f0f0;
     width: 100%;
     height: 1px;
     margin-bottom: 8%;
@@ -63,16 +46,13 @@
     position: relative;
     z-index: 0;
 
-
     .border-div-li {
-
-        background: #F0F0F0;
-        width: 100%;
-        height: 1px;
-        margin-bottom: 8%;
-        margin-top: 5%;
-
-      }
+      background: #f0f0f0;
+      width: 100%;
+      height: 1px;
+      margin-bottom: 8%;
+      margin-top: 5%;
+    }
 
     li {
       display: flex;
@@ -83,8 +63,6 @@
       img {
         width: 25%;
       }
-
-    
 
       .text-produit {
         width: 100%;
@@ -126,59 +104,47 @@
     align-items: center;
 
     h6 {
-        font-size: 1.3rem;
+      font-size: 1.3rem;
     }
   }
 
-
-  .checkout-button{
-
-    a{
-
+  .checkout-button {
+    a {
       margin-top: 3%;
       border-radius: 10px;
-    box-shadow: 0px 15px 30px 0px rgba(40, 37, 37, 0.5);
-    padding: 0.417vw 1.25vw 0.417vw 0.417vw;
-    transition: all 0.5s ease-in;
-    font-size: 0.938vw;
-    font-weight: 500;
-    line-height: 120%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    border: none;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    transition: all 0.5s ease-in;
-    width: fit-content;
-    cursor: pointer;
+      box-shadow: 0px 15px 30px 0px rgba(40, 37, 37, 0.5);
+      padding: 0.417vw 1.25vw 0.417vw 0.417vw;
+      transition: all 0.5s ease-in;
+      font-size: 0.938vw;
+      font-weight: 500;
+      line-height: 120%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 12px;
+      border: none;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      transition: all 0.5s ease-in;
+      width: fit-content;
+      cursor: pointer;
 
-
-      h5{
-
+      h5 {
         font-size: 0.7rem;
-
       }
 
       i {
         font-size: 1.2rem;
-
       }
-
     }
 
-    .outline-a{
+    .outline-a {
       background: transparent;
-      color: #FF5C00;
-      border: 1px solid #FF5C00;
+      color: #ff5c00;
+      border: 1px solid #ff5c00;
       box-shadow: none;
       transition: all 0.5s ease-in;
     }
-
-
-
-
   }
 }
