--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,7 +42,7 @@ button .fa-moon {
 }
 
 footer {
-  background-image: url(/assets/images/fast-food-fastfoodcity.png);
+  background-image: url(https://image.noelshack.com/fichiers/2024/18/4/1714605091-fast-food-fastfoodcity.jpg);
   background-position: center;
   color: var(--text-color);
   text-align: center;
