--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -44,7 +44,7 @@ button {
 
 
 footer {
-    background-image: url(/assets/images/fast-food-fastfoodcity.png);
+    background-image: url(https://image.noelshack.com/fichiers/2024/18/4/1714605091-fast-food-fastfoodcity.jpg);
     background-position: center;
     color: var(--text-color);
     text-align: center;
