--- a/assets/scss/_filter.scss
+++ b/assets/scss/_filter.scss
@@ -3,24 +3,40 @@
         aside{
             display: flex;
             flex-direction: column;
-            background-color: rgb(22, 22, 22);
+            background-color: rgb(30, 13, 13);
             width: 25%;
             border-radius: 45px;
             height: auto;
+            justify-items: center;
+
+            h2{
+                margin-left: 3%;
+                font-size: 35px;
+                color: white;
+                margin-bottom: 10px;
+                text-align: center;
+            }
             form{
+
+                legend{
+                    font-size: 33px;
+                    margin-bottom: 3%;
+                    margin-top: 2%;
+                }
+                div{
+                    label{
+                        font-size: 33px;
+                        margin-left: 7%;
+                    }
+                }
                 input{
                     margin: 4px 0 0;
                     line-height: normal;
-                    width: 20px;
-                    height: 20px;
+                    width: 25px;
+                    height: 21px;
+                    margin-left: 24%;
                 }
                 .legend_filter{
-                    text-align: center;
-                }
-    
-                h2{
-                    color: white;
-                    margin-bottom: 10px;
                     text-align: center;
                 }
             }
