--- a/assets/scss/_card.scss
+++ b/assets/scss/_card.scss
@@ -21,7 +21,7 @@ body {
 
   main {
     display: flex;
-    width: 100%;
+    width: auto;
     .div-container-menu {
       padding: 5%;
       display: flex;
@@ -37,10 +37,10 @@ body {
           23px 12px 26px 0px rgba(0, 0, 0, 0.03),
           53px 27px 35px 0px rgba(0, 0, 0, 0.02),
           94px 48px 42px 0px rgba(0, 0, 0, 0.01);
-        margin-right: 3%;
         margin-top: 8%;
         border: 1px solid #f0f0f0;
         padding: 1.667vw 1.25vw;
+        margin-right: 3%;
         .card {
           text-align: center;
 
@@ -113,7 +113,6 @@ h5 {
     .div-container-menu {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
       flex: 1 0 50%;
       box-sizing: border-box;
       margin: 10px;
