--- a/assets/scss/_filter.scss
+++ b/assets/scss/_filter.scss
@@ -3,10 +3,10 @@
         aside{
             display: flex;
             flex-direction: column;
-            background-color: rgb(22, 22, 22);
             width: 25%;
             border-radius: 45px;
             height: auto;
+            text-align: center;
             form{
                 input{
                     margin: 4px 0 0;
