--- a/assets/scss/_card.scss
+++ b/assets/scss/_card.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans+JP:wght@100..900&display=swap');
+
+
+
 :root {
   --card-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
@@ -38,6 +42,7 @@ body {
         border: 1px solid #f0f0f0;
         padding: 1.667vw 1.25vw;
         margin-right: 3%;
+        font-family: "Lato", sans-serif;
         .card {
           text-align: center;
 
@@ -100,7 +105,7 @@ body {
 
 h5 {
   display: flex;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 600;
 }
 
