--- a/assets/scss/_filter.scss
+++ b/assets/scss/_filter.scss
@@ -8,6 +8,7 @@
             height: auto;
             justify-items: center;
             margin-top: 8%;
+            padding: 2%;
 
             h2{
                 margin-bottom: 10px;
@@ -22,6 +23,7 @@
                 div{
                     label{
                         font-size: 33px;
+                        line-height: 3rem;
                   
                     }
                 }
