--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
     --background-color: #EFE7E1; 
     --text-color: #704929;
@@ -14,8 +16,6 @@ body {
     margin: 0;
     padding: 0;
     background-color: var(--background-color);
-    // position: relative;
-    
 }
 
 
@@ -40,40 +40,35 @@ button {
 
 
 footer {
-    background-image: url(https://image.noelshack.com/fichiers/2024/18/4/1714605091-fast-food-fastfoodcity.jpg);
-    background-position: center;
-    color: var(--text-color);
+ background-color: rgb(194, 103, 104);
     text-align: center;
-    font-family: 'Flamenco';
-    padding: 40px 0;
+  padding: 4%;
+     font-family: "Roboto", sans-serif;
+
     .footer-container {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
     }
     h2{
         letter-spacing: 2px;
-        font-size: 40px;
+        font-size: 2.5rem;
+        margin-bottom: 2%;
+        color: white;
     }
-    h3 {
-        margin: 20px 0;
-    }
+
     i {
-        color: var(--link-color);
         font-size: 25px;
-        margin: 0 10px;
+        letter-spacing: 1rem;
+
     }
 }
 
 @media screen and (min-width: 481px){
     footer {
-        h2{
-            letter-spacing: 2px;
-            font-size: 50px;
-        }
+
         i {
-            color: var(--link-color);
+           color: #b57e51;
             font-size: 30px;
-            margin: 0 20px;
         }
     }
 }
